<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.toad.keycloak.storage.ldap.mappers</groupId>
	<artifactId>keycloak-ldap-extdb-role--mapper</artifactId>
	<version>1.0.0</version>

	<name>Keycloak exernal DB rôle mapper for LDAP federation</name>
	<description>After LDAP Authentication, converting user's roles or groups from an external database into Keycloak Roles</description>

	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>

		<keycloak.version>20.0.2</keycloak.version>
		<!-- Set these version numbers according to keycloak parent.xml -->
		<resteasy.version>4.7.4.Final</resteasy.version>
		<jboss.logging.version>3.4.1.Final</jboss.logging.version>
		<junit.version>4.13.2</junit.version>
		<jboss-transaction-api_1.3_spec>2.0.0.Final</jboss-transaction-api_1.3_spec>

		<postgresql.jdbc.driver.version>42.1.4</postgresql.jdbc.driver.version>
		<mariadb.jdbc.driver.version>2.2.0</mariadb.jdbc.driver.version>
		<jtds.jdbc.driver.version>1.3.1</jtds.jdbc.driver.version>
		<oracle.ojdbc8.driver.version>18.15.0.0</oracle.ojdbc8.driver.version>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-core</artifactId>
			<version>${keycloak.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-server-spi</artifactId>
			<version>${keycloak.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-server-spi-private</artifactId>
			<version>${keycloak.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.keycloak</groupId>
			<artifactId>keycloak-ldap-federation</artifactId>
			<version>${keycloak.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxrs-all</artifactId>
			<version>${resteasy.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>${jboss.logging.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.transaction</groupId>
			<artifactId>jboss-transaction-api_1.3_spec</artifactId>
			<version>${jboss-transaction-api_1.3_spec}</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 
        <dependency>
            <groupId>c3p0</groupId>
            <artifactId>c3p0</artifactId>
            <version>0.9.2</version>
        </dependency>-->
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<!-- ORACLE JDBC Driver -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>${oracle.ojdbc8.driver.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.jdbc.driver.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
			<groupId>org.mariadb.jdbc</groupId>
			<artifactId>mariadb-java-client</artifactId>
			<version>${mariadb.jdbc.driver.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
		<dependency>
			<groupId>net.sourceforge.jtds</groupId>
			<artifactId>jtds</artifactId>
			<version>${jtds.jdbc.driver.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>commons-dbcp</groupId>
							<artifactId>commons-dbcp</artifactId>
							<version>1.4</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
						<artifactItem>
							<groupId>com.oracle.database.jdbc</groupId>
							<artifactId>ojdbc8</artifactId>
							<version>${oracle.ojdbc8.driver.version}</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
						<artifactItem>
							<groupId>commons-pool</groupId>
							<artifactId>commons-pool</artifactId>
							<version>1.5.4</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
						<artifactItem>
							<groupId>org.postgresql</groupId>
							<artifactId>postgresql</artifactId>
							<version>42.1.4</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
						<artifactItem>
							<groupId>org.mariadb.jdbc</groupId>
							<artifactId>mariadb-java-client</artifactId>
							<version>2.2.1</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
						<artifactItem>
							<groupId>net.sourceforge.jtds</groupId>
							<artifactId>jtds</artifactId>
							<version>1.3.1</version>
							<type>jar</type>
							<overWrite>false</overWrite>
						</artifactItem>
					</artifactItems>
					<outputDirectory>${project.build.directory}</outputDirectory>
					<overWriteReleases>false</overWriteReleases>
					<overWriteSnapshots>true</overWriteSnapshots>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<url>https://github.com/ArnaultMICHEL/keycloak-ldap-extdb-role-mapper</url>
</project>